--- a/src/App.module.css
+++ b/src/App.module.css
@@ -69,3 +69,13 @@ header .headerContainer {
   grid-template-columns: repeat(2,1fr);
   gap: 20px;
 }
+
+.container .rightSide .rightBig {
+  flex:1;
+  display: flex;
+}
+
+.yourImc {
+  font-size: 17px;
+  margin: 10px 0 50px 0;
+}
