--- a/src/App.module.css
+++ b/src/App.module.css
@@ -79,3 +79,22 @@ header .headerContainer {
   font-size: 17px;
   margin: 10px 0 50px 0;
 }
+
+.container .rightSide .rightArrow {
+  position: absolute;
+  background-color: #227C9D;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  margin-left: -35px;
+  margin-top: 145px;
+  transition: all ease .3s;
+}
+
+.container .rightSide .rightArrow:hover{
+  opacity: .8;
+}
