--- a/src/App.module.css
+++ b/src/App.module.css
@@ -8,7 +8,9 @@ header .headerContainer {
   max-width: 900px;
   margin: 40px auto;
 }
-
+.main {
+  padding-bottom: 50px;
+}
 .container {
   display: flex;
   max-width: 900px;
@@ -103,4 +105,33 @@ header .headerContainer {
 
 .container .rightSide .rightArrow:hover{
   opacity: .5;
+}
+
+@media(max-width:770px) {
+  header {
+    padding: 0 20px;
+  }
+  .container {
+    padding: 0 20px;
+    flex-direction: column;
+  }
+  .container .leftSide {
+    margin-right: 0;
+  }
+  .container .rightSide {
+    margin-left: 0;
+    margin-top:50px;
+  }
+
+  .container .rightSide .rightArrow {
+    margin-left: -15px;
+    margin-top:-15px;
+    background-color: transparent;
+  }
+}
+
+@media(max-width : 430px){
+  .container .rightSide .grid {
+    grid-template-columns: 1fr;
+  }
 }
